fix ucum property links